# fmathcurve

./: CMakeLists.txt  README.md  classcalccurve.cpp  classcalccurve.h  images.qrc  main.cpp  main.qml
